tests added fixed logic